--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= markdown @post.title %></h1>
 
-
+<%= image_tag(@post.image.url) if @post.image? %>
 <div class="row">
   <div class="col-md-8">
     <small>
