--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -21,7 +21,8 @@
           </small>
         </div>
       </div>
-    <% end %>  
+    <% end %>
+    <%= will_paginate @posts %>  
   </div>
   <div class="col-md-4">
     <% if policy(Post.new).create? %>
