--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<% @comments.each do |comment| %>
+<% @comments.select(&:persisted?).each do |comment| %>
   <div class="col-md-8 comment">
     <p><%= comment.body %></p>
     <small>submitted <%= time_ago_in_words(comment.created_at) %> ago by <%= comment.user.name %></small>
