--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,7 @@
 <% @comments.select(&:persisted?).each do |comment| %>
   <div class="col-md-8 comment">
     <p><%= comment.body %></p>
+    <%= image_tag(comment.user.avatar.tiny.url) if comment.user.avatar? %>
     <small>submitted <%= time_ago_in_words(comment.created_at) %> ago by <%= comment.user.name %></small>
   </div>
 <% end %>
