--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,7 +1,21 @@
-<% @comments.select(&:persisted?).each do |comment| %>
-  <div class="col-md-8 comment">
-    <p><%= comment.body %></p>
-    <%= image_tag(comment.user.avatar.tiny.url) if comment.user.avatar? %>
-    <small>submitted <%= time_ago_in_words(comment.created_at) %> ago by <%= comment.user.name %></small>
+<% @comments.each do |comment| %>
+  <div class="media">
+    <%= link_to '#', class: 'pull-left' do %>
+      <%= image_tag(comment.user.avatar.small.url) if comment.user.avatar? %>
+    <% end %>
+    <div class="media-body">
+      <small>
+        <%= comment.user.name %> commented <%= time_ago_in_words(comment.created_at) %> ago
+        <% if policy(comment).destroy? %>
+          | <%= link_to "Delete", [@topic, @post, comment], method: :delete %>
+        <% end %>
+      </small>
+      <p><%= comment.body %></p>
+    </div>
   </div>
 <% end %>
+
+
+
+
+
