--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,6 +9,9 @@
     <% if policy(@post).edit? %>
       <%= link_to "Edit", edit_topic_post_path(@topic, @post), class: 'btn btn-success' %>
     <% end %>
+    <% if policy(@post).destroy? %>
+      <%= link_to "Delete Post", [@topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?'} %>
+    <% end %>
   </div>
 </div>
 <br>
@@ -16,11 +19,9 @@
   <div class="col-lg-12">
     <h1>Comments</h1>
   </div>
+</div>
   <% if user_signed_in? %>
-    <div class="col-lg-12">
       <%= render partial: 'comments/form' %>
-    </div>
   <% end %>
   <%= render partial: 'comments/comment' %>
-</div>
 
