--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,4 @@
+@import "bootstrap-sprockets";
 @import "bootstrap";
 @import "comments";
 
@@ -7,6 +8,10 @@
 .nav{
   margin-top: 5px;
 }
+.vote-arrows {
+   width: 40px;
+   text-align: center;
+ }
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
