--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,8 @@
-<h1><%= markdown @post.title %></h1>
-
 <%= image_tag(@post.image.url) if @post.image? %>
 <div class="row">
   <div class="col-md-8">
+    <h1><%= markdown @post.title %></h1>
+    <%= render partial: 'votes/voter', locals: { post: @post } %>
     <%= image_tag(@post.user.avatar.tiny.url) if @post.user.avatar? %>
     <small>submitted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.name %></small>
     <p><%= markdown @post.body %></p>
