--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,6 +19,7 @@
         <%= pluralize(@post.down_votes, 'down vote') %>
       </small>
   </div>
+  <%= render partial: 'favorites/favorite', locals: { post: @post } %>
 </div>
 <br>
 <div class="row">
