--- a/app/views/comments/destroy.js.erb
+++ b/app/views/comments/destroy.js.erb
@@ -1,6 +1,6 @@
 <% if @comment.destroyed? %>
-  $('#comment-' +<%= comment.id %>).fadeOut( "slow" )
+  $('#comment-<%= @comment.id %>').fadeOut( "slow" )
   $('.js-comments-count').html("<%= @comment.user.comments.count %> comments");
 <% else %>
-  $('#comment-' +<%= comment.id %>).prepend("<div class='alert alert-danger'><%= flash[:error] %></div>");
+  $('#comment-<%= @comment.id %>').prepend("<div class='alert alert-danger'><%= flash[:error] %></div>");
 <% end %>
