--- a/app/views/topics/posts/show.html.erb
+++ b/app/views/topics/posts/show.html.erb
@@ -18,8 +18,9 @@
         <%= pluralize(@post.up_votes, 'up vote') %> |
         <%= pluralize(@post.down_votes, 'down vote') %>
       </small>
+    </div>
+    <%= render partial: 'favorites/favorite', locals: { post: @post } %>
   </div>
-  <%= render partial: 'favorites/favorite', locals: { post: @post } %>
 </div>
 <br>
 <div class="row">
@@ -27,8 +28,8 @@
     <h1>Comments</h1>
   </div>
 </div>
-  <% if user_signed_in? %>
-      <%= render partial: 'comments/form' %>
-  <% end %>
-  <%= render partial: 'comments/comment', collection: @comments %>
+<% if user_signed_in? %>
+    <%= render partial: 'comments/form' %>
+<% end %>
+<%= render partial: 'comments/comment'%>
 
